baml_language/crates/baml_tests/snapshots/diagnostic_errors/requires_clause_shapes/baml_tests__diagnostic_errors__requires_clause_shapes__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.ImplementsErrorArg {
  v: int
}
class user.ImplementsErrorArg$stream {
  v: int | null
}
class user.NotIface {
  v: int
}
class user.NotIface$stream {
  v: int | null
}
type user.PlainAlias = Plain
type user.PlainAlias$stream = Plain
function user.c(self: ?) -> int  [expr] {
  { return 0 }
}
