baml_language/crates/baml_tests/snapshots/diagnostic_errors/requires_clause_shapes/baml_tests__diagnostic_errors__requires_clause_shapes__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.PlainAlias = user.Plain
class user.NotIface {
  v: int
}
class user.ImplementsErrorArg {
  v: int
}
function user.ImplementsErrorArg.c(self: user.ImplementsErrorArg) -> int throws never {
  { : never
    return 0 : 0
  }
}
type user.PlainAlias$stream = user.Plain
class user.NotIface$stream {
  v: int | null
}
class user.ImplementsErrorArg$stream {
  v: int | null
}
